--- a/代码/CommonPLctlZ3/设备及外部系统对接/DevInterface/DevInterface.csproj
+++ b/代码/CommonPLctlZ3/设备及外部系统对接/DevInterface/DevInterface.csproj
@@ -58,6 +58,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IAirlossDetectDev.cs" />
+    <Compile Include="IHKAccess.cs" />
+    <Compile Include="IOcvAccess.cs" />
     <Compile Include="PLCDataDef.cs" />
     <Compile Include="IBarcodeDev.cs" />
     <Compile Include="IMesAccess.cs" />
