--- a/代码/CommonPLctlZ3/实际产线控制节点/LineNodes1/LineNodesFTzj.csproj
+++ b/代码/CommonPLctlZ3/实际产线控制节点/LineNodes1/LineNodesFTzj.csproj
@@ -54,12 +54,6 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DevAccess">
-      <HintPath>..\..\libReference\DevAccess.dll</HintPath>
-    </Reference>
-    <Reference Include="DevInterface">
-      <HintPath>..\..\libReference\DevInterface.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -143,6 +137,14 @@
     <ProjectReference Include="..\..\日志模块\LogInterface\LogInterface.csproj">
       <Project>{f929e2c2-43ed-4d7e-8426-356b0ec3c540}</Project>
       <Name>LogInterface</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\设备及外部系统对接\DevAccess\DevAccess.csproj">
+      <Project>{c5f63c04-3b10-4fa9-96ca-226c4d405583}</Project>
+      <Name>DevAccess</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\设备及外部系统对接\DevInterface\DevInterface.csproj">
+      <Project>{ae429508-4cb7-499e-88f0-c939496e7bea}</Project>
+      <Name>DevInterface</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
